# robotics-rl

./: .gitignore  README.md  potential_blog_reward_shaping.md  pyproject.toml
configs/: __init__.py  ppo_config.py
envs/: __init__.py  lift_custom.py  robosuite_wrapper.py
notebooks/: MUJOCO_LOG.TXT  reward_visualization.ipynb  robosuite.ipynb
scripts/: eval_policy.py  train_lift.py
training/: ppo.py
